--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./bower_components/angular-route/angular-route.min.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
   </head>
-  <body ng-app="SoundCloudApp">
+  <body ng-app="SoundCloudApp" ng-cloak>
     <div class="background">
 
       <ng-view></ng-view>
@@ -24,9 +24,11 @@
 
 
     <script src="./js/app.js"></script>
-    <script src="./js/controllers/MainController.js"></script>
+    <script src="./js/controllers/LoginController.js"></script>
     <script src="./js/controllers/DashboardController.js"></script>
+    <script src="./js/services/loginService.js"></script>
     <script src="./js/services/SoundService.js"></script>
+    <script src="./js/filters/TitleFilter.js"></script>
   </body>
 </html>
 
