--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
   </head>
   <body ng-app="SoundCloudApp" ng-cloak>
-    <div class="background">
+    <div class="background background-grey">
 
       <ng-view></ng-view>
 
