--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Soundcloud App</title>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="./bower_components/perfect-scrollbar/min/perfect-scrollbar.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
     <script src="./bower_components/angular/angular.min.js"></script>
     <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="./bower_components/angular-aria/angular-aria.min.js"></script>
@@ -14,6 +16,9 @@
     <script src="./bower_components/angular-material/angular-material.min.js"></script>
     <script src="./bower_components/angular-route/angular-route.min.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.min.js"></script>
+    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.with-mousewheel.min.js"></script>
+    <script src="./bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
   </head>
   <body ng-app="SoundCloudApp" ng-cloak>
     <div class="background background-grey">
@@ -28,8 +33,8 @@
     <script src="./js/controllers/LoginController.js"></script>
     <script src="./js/controllers/DashboardController.js"></script>
     <script src="./js/services/loginService.js"></script>
-    <script src="./js/services/SoundService.js"></script>
-    <script src="./js/filters/TitleFilter.js"></script>
+    <script src="./js/services/soundService.js"></script>
+    <script src="./js/filters/titleFilter.js"></script>
   </body>
 </html>
 
