--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="./bower_components/angular/angular.min.js"></script>
-    <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="./bower_components/angular-aria/angular-aria.min.js"></script>
-    <script src="./bower_components/angular-messages/angular-messages.min.js"></script>
-    <script src="./bower_components/angular-material/angular-material.min.js"></script>
-    <script src="./bower_components/angular-route/angular-route.min.js"></script>
-    <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
-    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.min.js"></script>
-    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.with-mousewheel.min.js"></script>
-    <script src="./bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
   </head>
   <body ng-app="SoundCloudApp" ng-cloak>
     <div class="background background-grey">
@@ -27,7 +17,21 @@
 
     </div>
 
+    <!-- Angular Material requires Angular.js Libraries -->
+    <script src="./bower_components/angular/angular.min.js"></script>
+    <script src="./bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="./bower_components/angular-aria/angular-aria.min.js"></script>
+    <script src="./bower_components/angular-messages/angular-messages.min.js"></script>
+    <script src="./bower_components/angular-route/angular-route.min.js"></script>
 
+    <!-- Angular Material Library -->
+    <script src="./bower_components/angular-material/angular-material.min.js"></script>
+
+    <!-- Other .js libraries -->
+    <script src="https://connect.soundcloud.com/sdk/sdk-3.1.2.js"></script>
+    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.min.js"></script>
+    <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.with-mousewheel.min.js"></script>
+    <script src="./bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/controllers/LoginController.js"></script>
