--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="./js/services/loginService.js"></script>
     <script src="./js/services/soundService.js"></script>
     <script src="./js/filters/titleFilter.js"></script>
+    <script src="./js/directives/d3Equalizer.directive.js"></script>
   </body>
 </html>
 
