--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.min.js"></script>
     <script src="./bower_components/perfect-scrollbar/min/perfect-scrollbar.with-mousewheel.min.js"></script>
     <script src="./bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
+    <script src="./bower_components/d3/d3.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/controllers/LoginController.js"></script>
